# markdown-table-formatter

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml
benches/: bench.rs
docs/: publishing_to_npm.md  table_formatter_behavior.md
src/: ast.rs  lib.rs  table_formatter.rs
tests/: integration_tests.rs
tests/text_snippets/: 2_row_table.txt  2_row_table_fixed.txt  basic_table.txt  basic_table_fixed.txt  emoji_table.txt  emoji_table_fixed.txt  interspersed_tables.txt  interspersed_tables_fixed.txt  markdown_rs_failure_case.txt  table_alignment.txt  table_alignment_fixed.txt  table_in_blockquote.txt  table_in_blockquote_fixed.txt  table_in_code_block.txt  table_in_html_comment.txt  table_width_expansion.txt  table_width_expansion_fixed.txt  table_width_reduction.txt  table_width_reduction_fixed.txt  table_with_empty_cells.txt  table_with_empty_cells_fixed.txt  table_with_pipe_in_code_block.txt  table_with_pipe_in_code_block_fixed.txt  table_with_trailing_text.txt  table_with_trailing_text_fixed.txt  weird_unicode.txt  weird_unicode_fixed.txt
